--- a/.gitignore
+++ b/.gitignore
@@ -191,7 +191,8 @@ xcuserdata/
 #
 # c.f. http://guides.cocoapods.org/using/using-cocoapods.html#what-is-a-podfilelock
 # c.f. http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
+*.xcodeproj/
+DerivedData
 !Podfile.lock
 #
 # RUBY:
